attached_assets/Pasted-2025-05-24-18-36-43-91-9fe7e56d-User-import-pkg-from-express-openid-connect-2025-05-24-18-36-43-9-1748193110122.txt
2025-05-24 18:36:43.91
9fe7e56d
User
import pkg from 'express-openid-connect';
2025-05-24 18:36:43.91
9fe7e56d
User
const { requiresAuth } = pkg;
2025-05-24 18:36:43.91
9fe7e56d
User
2025-05-24 18:36:43.91
9fe7e56d
User
at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
2025-05-24 18:36:43.91
9fe7e56d
User
at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
2025-05-24 18:36:43.91
9fe7e56d
User
at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
2025-05-24 18:36:43.91
9fe7e56d
User
at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)
2025-05-24 18:36:43.91
9fe7e56d
User
2025-05-24 18:36:43.91
9fe7e56d
User
Node.js v20.18.1
2025-05-24 18:36:43.92
9fe7e56d
System
command finished with error [npm run start]: exit status 1
2025-05-24 18:36:51.39
9fe7e56d
User
file:///home/runner/workspace/dist/index.js:573
2025-05-24 18:36:51.39
9fe7e56d
User
import { requiresAuth } from "express-openid-connect";
2025-05-24 18:36:51.39
9fe7e56d
User
^^^^^^^^^^^^
2025-05-24 18:36:51.39
9fe7e56d
User
SyntaxError: Named export 'requiresAuth' not found. The requested module 'express-openid-connect' is a CommonJS module, which may not support all module.exports as named exports.
2025-05-24 18:36:51.39
9fe7e56d
User
CommonJS modules can always be imported via the default export, for example using:
2025-05-24 18:36:51.39
9fe7e56d
User
2025-05-24 18:36:51.39
9fe7e56d
User
import pkg from 'express-openid-connect';
2025-05-24 18:36:51.39
9fe7e56d
User
const { requiresAuth } = pkg;
2025-05-24 18:36:51.39
9fe7e56d
User
2025-05-24 18:36:51.39
9fe7e56d
User
at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
2025-05-24 18:36:51.39
9fe7e56d
User
at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
2025-05-24 18:36:51.39
9fe7e56d
User
at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
2025-05-24 18:36:51.39
9fe7e56d
User
at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)
2025-05-24 18:36:51.39
9fe7e56d
User
2025-05-24 18:36:51.39
9fe7e56d
User
Node.js v20.18.1
2025-05-24 18:36:51.40
9fe7e56d
System
command finished with error [npm run start]: exit status 1
2025-05-24 18:36:55.90
9fe7e56d
System
crash loop detected
2025-05-24 20:31:14.59
7392f24a
User
[Runware] Generation error details: { message: undefined, stack: undefined }
2025-05-24 20:31:14.59
7392f24a
User
Image generation error: Error: Image generation failed: Unknown error occurred
2025-05-24 20:31:14.59
7392f24a
User
at RunwareImageGenerationService.generateImages (file:///home/runner/workspace/dist/index.js:841:13)
2025-05-24 20:31:14.59
7392f24a
User
at async GenerateImagesCommandHandler.handle (file:///home/runner/workspace/dist/index.js:863:30)
2025-05-24 20:31:14.59
7392f24a
User
at async ImageController.generateImages (file:///home/runner/workspace/dist/index.js:1038:22)
2025-05-24 21:02:12.17
1861b81c
User
BadRequestError: checks.state argument is missing
2025-05-24 21:02:12.17
1861b81c
User
at ResponseContext.callback (/home/runner/workspace/node_modules/express-openid-connect/lib/context.js:379:15)
2025-05-24 21:02:12.17
1861b81c
User
at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
2025-05-25 10:34:36.19
fb51353e
User
BadRequestError: checks.state argument is missing
2025-05-25 10:34:36.19
fb51353e
User
at ResponseContext.callback (/home/runner/workspace/node_modules/express-openid-connect/lib/context.js:379:15)
2025-05-25 10:34:36.19
fb51353e
User
at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
